--- a/ShopNScroll/src/main/webapp/resources/css/main-style.css
+++ b/ShopNScroll/src/main/webapp/resources/css/main-style.css
@@ -65,13 +65,19 @@ background-color:rgba(0,0,0,0.5);
 body
 {
 	background-color:rgb(220,245,213);
-/* 	background-image:url("../../resources/img/bodypattern.png"); */
+	background-image:url("../../resources/img/bodypattern.png");
+	background-attachment: fixed;
 }
 
 .body-area
 {
+	background-color: rgba(255,255,255,0.8);
+	background-attachment: fixed;
+}
+
+.margin-divider
+{
 	margin-top: 60px;
-	background-color: rgb(0,0,0,0.4);
 }
 
 .casual-button
