--- a/ShopNScroll/src/main/webapp/resources/css/main-style.css
+++ b/ShopNScroll/src/main/webapp/resources/css/main-style.css
@@ -137,7 +137,7 @@
 		padding:8px 8px;
 		border: 1px solid white;
 		border-radius: 50px 50px 50px 50px;
-		font-size: large;
+		font-size: small;
 		color:rgb(255,255,255);
 		text-align: center;
  }
@@ -151,12 +151,37 @@
 		background-color:rgba(255,255,255,0.1);
  }
  
- #admin-profile
+ #admin-profile, #buyer-profile
  {
  		color: rgba(255,255,255,1.0);
  }
  
+ .profile-grid:hover
+ {
+ 		background-color: rgba(153,255,0,0.4);
+ }
+ .profile-grid-danger:hover
+ {
+ 		background-color: rgba(255,64,50,0.4);
+ }
+ 
 /* ------------------------------------------------------------------------- BODY STYLING */
+
+.no-js #loader { display: none;  }
+
+.js #loader { display: block; position: absolute; left: 100px; top: 0; }
+
+#load-animation
+{
+/*  	display: none;  */
+ 	position: fixed;
+	left: 0px;
+	top: 0px;
+	width: 100%;
+	height: 100%;
+	z-index: 9999;
+	background: url("../../resources/img/logo-sm.png") center no-repeat rgba(255,255,255,1.0);	
+}
 
 #margin-divider
 {
@@ -341,7 +366,7 @@ body
 
 .sns-crumb:hover , .sns-current-crumb:hover
 {
-	font-weight: bold;
+	color: rgba(255,255,255,0.6);
 	text-decoration: none;
 }
 
@@ -350,6 +375,91 @@ body
 	font-size: large;
 	color: rgba(255,255,255,1.0);
  	text-decoration: none;
+}
+
+.product-grid
+{
+
+	background-color:rgba(255,255,255,0.5);	
+	color:rgba(0,0,0,1.0);
+	font-weight: bold;
+	border: 2px solid rgba(0,0,0,0.1);
+	border-radius:10px 10px 10px 10px;
+	margin: 3px 3px 3px 3px;
+}
+.product-grid:hover
+{
+	background-color:rgba(255,255,255,1.0);
+	color:rgba(0,0,0,1.0);
+	border: 2px solid rgba(0,0,0,0.3);
+}
+.product-grid-img
+{
+	background-color:rgb(255,255,255);
+	border-radius:5px 5px 5px 5px;	
+	border: 2px solid rgba(0,0,0,0.1);
+}
+.product-grid-button
+{
+	border-radius: 10px 10px 10px 10 px;
+}
+
+.product-grid-caption
+{
+	margin-left: 0px;
+	margin-right: opx;
+	margin-bottom: 0px;
+	background-color: rgba(0,0,0,0.3);
+	color:white;
+	margin:inherit;
+}
+
+.btn-nice
+{
+	font-size: large;
+	color:white;
+	background-color: rgba(255,0,0,0.7);
+	border-radius: 50px 50px 50px 50px;
+	height:auto;
+	width:auto;
+	margin: 3px 3px 3px 3px;
+}
+.btn-nice:hover, .btn-nice:active
+{
+	color:white;	
+	background-color: rgba(255,0,0,1.0);
+}
+
+.btn-sleek
+{
+	font-size: large;
+	color:white;
+	background-color: rgba(0,175,0,0.7);
+	border-radius: 50px 50px 50px 50px;
+	height:auto;
+	width:auto;
+	margin: 3px 3px 3px 3px;
+}
+.btn-sleek:hover, .btn-sleek:active
+{
+	color:white;
+	background-color: rgba(0,175,0,1.0);
+}
+
+.btn-good
+{
+	font-size: medium;
+	color:white;
+	background-color: rgba(0,193,193,0.7);
+	border-radius: 50px 50px 50px 50px;
+	height:auto;
+	width:auto;
+	margin: 3px 3px 3px 3px;
+}
+.btn-good:hover, .btn-good:active
+{
+	color:white;
+	background-color: rgba(0,193,193,1.0);
 }
 
 /* ------------------------------------------------------------------------- FOOT STYLING */
